--- a/code/package.json
+++ b/code/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.0",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
@@ -29,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   }
 }
